# dp-splat

./: CODEMAP.md  DEPENDENCIES.md  LICENSE  LIMITATIONS.md  README.md  REPRO.md  RESULTS.md  environment.yml  pyproject.toml
experiments/: fig1_elbo_traces.py  fig2_khat_grid.py  fig3_truncation.py  fig4_khat_vs_n.py  fig5_calibration.py  fig6_wasserstein.py  phase0_baseline_image.py  phase0_baseline_image_results.json  phase1_image_vs_vbgs.py  phase3_scene_calibration.py  phase3_scenes.py  scooping_check.py  svi_scaling.py  synthetic.py  synthetic3d.py
src/dp_splat/: __init__.py  cavi.py  niw.py  predictive.py  priors.py  prune.py  render.py  svi.py
tests/: conftest.py  oracle_numpy.py  test_elbo_mc.py  test_identities.py  test_monotonicity.py  test_predictive.py  test_svi.py  test_updates_vs_oracle.py  test_vbgs_regression.py
