[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dp-splat"
version = "0.0.1"
description = "Bayesian nonparametric complexity control for Gaussian splatting (DP-Splat)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Aqi Dong", email = "donga2@erau.edu" }]
dependencies = [
    "jax>=0.10",
    "numpy>=2.0",
    "scipy>=1.14",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
